Added some improvement plans?

--- a/5retrieval-module.tex
+++ b/5retrieval-module.tex
@@ -1240,3 +1240,10 @@ that, as the colour semantics were not hard coded into one final category,
 the colour retrieval process shows significant improvement over the method
 proposed in \versionOneRet.
 
+In order to further improve the performance of the proposed method, a better
+colour model should be implemented. Along with that, the proposed method of
+using Chamfer Distance to calculate the similarity between the query and dataset
+could be improved by maximising the dissimilarity score for cases where none of
+the points intersects or in cases where only a few points intersects with the
+query.
+
