Updated literature review chapter
Added in new citations, proof read it as well

--- a/llt.bib
+++ b/llt.bib
@@ -11,6 +11,30 @@
   organization={IEEE}
 }
 
+@article{mccune2002distance,
+  title={Distance measures},
+  author={McCune, B and Grace, JB and Urban, DL},
+  journal={Analysis of Ecological Communities. Gleneden Beach, OR: MJM},
+  pages={45--57},
+  year={2002}
+}
+
+@article{de1971color,
+  title={A Color Theory from Prague: Anselm de Boodt},
+  author={de Boodt, C Parkhurst},
+  journal={Allen Memorial Art Museum Bulletin},
+  volume={29},
+  pages={3--10},
+  year={1971}
+}
+
+@book{albers2006interaction,
+  title={Interaction of color},
+  author={Albers, Josef},
+  year={2006},
+  publisher={Yale University Press}
+}
+
 
 @article{tian2017hierarchical,
   title={Hierarchical and networked vehicle surveillance in its: A survey},
@@ -431,13 +455,13 @@
 }
 
 
-@misc{eyespectrum, title={Normalized human photoreceptor absorbances for different wavelengths of light}, 
+@misc{eyespectrum, title={Normalized human photoreceptor absorbances for different wavelengths of light},
 author={OpenStax College},
 year={2013},
 url={https://cnx.org/contents/FPtK1zmh@6.27:s3XqfSLV@4/Sensory-Perception}}
 
 
-@misc{nixsensorltd, title={Nix Mini Color Sensor | The perfect tool for paint color matching}, url={https://www.nixsensor.com/nix-mini/}, journal={Nix Sensor Ltd}} 
+@misc{nixsensorltd, title={Nix Mini Color Sensor | The perfect tool for paint color matching}, url={https://www.nixsensor.com/nix-mini/}, journal={Nix Sensor Ltd}}
 
 @misc{adafruit, title={Adafruit TCS34725 RGB Sensor}, url={https://www.adafruit.com/product/1334}, journal={Adafruit}}
 
@@ -494,7 +518,7 @@ title = {Efficient Salient Region Detection with Soft Image Abstraction},
 booktitle = {The IEEE International Conference on Computer Vision (ICCV)},
 month = {December},
 year = {2013}
-} 
+}
 
 @article{flickner1995qbic,
   title={The QBIC system},
@@ -723,7 +747,7 @@ year = {2013}
 
 
 
-@misc{spors_2018, title={Quantization of Signals}, url={https://github.com/spatialaudio/digital-signal-processing-lecture/blob/master/quantization/introduction.ipynb}, author={Spors, Sascha}, year={2018}, month={Oct}} 
+@misc{spors_2018, title={Quantization of Signals}, url={https://github.com/spatialaudio/digital-signal-processing-lecture/blob/master/quantization/introduction.ipynb}, author={Spors, Sascha}, year={2018}, month={Oct}}
 
 
 @inproceedings{cheong2018vehicle,
@@ -736,10 +760,10 @@ year = {2013}
 }
 
 
-@article{riemersma, 
-title={Colour metric}, 
+@article{riemersma,
+title={Colour metric},
 author={Riemersma, Thiadmer},
-journal={Colour metric: https://www.compuphase.com/cmetric.htm},   year={2018}} 
+journal={Colour metric: https://www.compuphase.com/cmetric.htm},   year={2018}}
 
 @article{woodhouse2016big,
   title={Big, big, big data: higher and higher resolution video surveillance},
