Updated formating of tables & figures
Sentence Case Each Character for Tables and Figures.
;)

--- a/2literature-review.tex
+++ b/2literature-review.tex
@@ -39,7 +39,7 @@ continuous or analogue in nature into a set of discrete and finite values.
 \begin{figure}[hbt!]
  \centering
  \includegraphics[width=\textwidth]{image/general/quantization.png}
- \caption{Quantization}
+ \caption{Illustration of the Quantization Process}
  \label{fig:quantize}
 \end{figure}
 
@@ -176,7 +176,7 @@ Hamming Distance & \begin{tabular}[c]{@{}l@{}}Ensure similarity between vectors,
 on n-Dimension data\end{tabular} & \begin{tabular}[c]{@{}l@{}}Vector order
 dependent,\\ Requires same length vectors\end{tabular} \\ \hline
 \end{tabular}% }
-\caption{List of several distance measures along with their pros and cons}
+\caption{List of several Distance Measures, Their Pros and Cons}
 \label{table:distance}
 \end{table}
 
@@ -222,12 +222,12 @@ one way or another.
 \begin{figure}[hbt!]
  \centering
  \includegraphics[width=.7\textwidth]{image/lit/ColorSensitivity.jpg}
- \caption[Normalised human photo-receptor absorbency rate for different
- wavelength lights]{Normalised human photo-receptor (cons \& rods) absorbency
- rate for different wavelengths of light. 'Blue' cones, approximately 420-440
- nm, are short wavelengths light; 'Green' cones, approximately 534-545 nm, are
- medium wavelengths light; and, 'Red' cones, approximately 564-580 nm, are long
- wavelength lights }
+ \caption[Normalised Human Photo-Receptor Absorbency Rate for Different
+ Wavelength Lights]{Normalised Human Photo-Receptor (Cons \& Rods) Absorbency
+ Rate for Different Wavelengths of Light. 'Blue' Cones, Approximately 420-440
+ nm, are Short Wavelengths Light; 'Green' Cones, Approximately 534-545 nm, are
+ Medium Wavelengths Light; and, 'Red' Cones, Approximately 564-580 nm, are Long
+ Wavelength Lights }
 \label{fig:visibleSpectrum}
 \end{figure}
 
@@ -263,7 +263,7 @@ represented using $(0, 0, 0)$, while 'White' using $(255, 255, 255)$. Figure
 \begin{figure}[hbt!]
  \centering
  \includegraphics[width=.4\textwidth]{image/lit/rgbcolor.jpg}
- \caption{RGB colour Model}
+ \caption{RGB Colour Model}
 \label{fig:rgb}
 \end{figure}
 
@@ -297,7 +297,7 @@ along the value axis.
  \includegraphics[width=0.4\linewidth]{image/general/25YR.png}\\ (a) Munsell
  colour System & (b) Hue at 2.5YR with various Chroma and Value\\
  \end{tabular}}
-\caption{Munsell colour System}
+\caption{Munsell Colour System}
 \label{fig:munsell}
 \end{figure}
 
@@ -341,8 +341,8 @@ allocated to describe the vehicle colours.
  & 954                         & 2010
  \\ \hline
  \end{tabular}
- \caption[Web Colour Dictionary and the corresponding number of colour terms]
- {Web Colour Dictionary and the corresponding number of colour terms}
+ \caption[Web Colour Dictionary and the Corresponding Number of Colour Terms]
+ {Web Colour Dictionary and the Corresponding Number of Colour Terms}
 \label{table:allcolourterms}
 \end{table}
 
@@ -561,7 +561,7 @@ classifier training is not suitable for real-time applications.
  (a) Input Image & (b) Response Map of the First Convolutional Layer \\
 \end{tabular}
 %}
-\caption[(a) Input and (b) Response from First Convolutional Layer. ]{(a) Input
+\caption[(a) Input and (b) Response from First Convolutional Layer]{(a) Input
 and (b) Response from First Convolutional Layer. Image reproduced from
 \citeA{hu2015vehicle}
 \label{fig:responseFCL}}
@@ -632,7 +632,7 @@ values when given a colour term.
  \caption[Google-retrieved examples for colour names. The red bounding boxes
  indicate false positives. An image can be retrieved with various colour names,
  such as the flower image which appears in the red and the yellow
- set.]{Google-retrieved examples for colour names. The red bounding boxes
+ set]{Google-retrieved examples for colour names. The red bounding boxes
  indicate false positives. An image can be retrieved with various colour names,
  such as the flower image which appears in the red and the yellow set.
  Reproduced from \citeA{van2009learning}.}
@@ -680,7 +680,7 @@ to 25 colour terms.
  $W$. (B) Colour Communication Example, where $U$ is a set of colours, shown
  for simplicity along a single dimension. A specific meaning $m$ is drawn from
  $p(m)$. The speaker communicates $m$ by uttering the word “blue”, and the
- listener interprets blue as meaning $\hat{m}$. ] {(A)
+ listener interprets blue as meaning $\hat{m}$] {(A)
  \citeA{shannon1948mathematical}'s communication model. In this model, the
  source message $M$ and its reconstruction $\hat{M}$ are distributions over
  objects in the universe $U$. We refer to these messages as meanings. $M$ is
@@ -811,7 +811,7 @@ number of spatio-temporal cubes used.
 \begin{figure}[hbt!]
   \centering
   \includegraphics[width=.5\textwidth]{image/lit/spatiotemporal.PNG}
-  \caption[Representation of Trajectories in a Spatio-temporal Cube.]
+  \caption[Representation of Trajectories in a Spatio-temporal Cube]
  {Representation of Trajectories in a Spatio-temporal Cube. Reproduced from
  \citeA{d2015designing}.}
   \label{fig:spatiocube}
@@ -822,7 +822,7 @@ number of spatio-temporal cubes used.
   \includegraphics[width=1\textwidth]{image/lit/spatiotemporal2.PNG}
   \caption[Representation of Human Trajectories in a Spatio-temporal Cube. (a)
   Original Object Trajectories; (b) Curve fitting results using high degrees;
-  (c) Curve fitting results using low degrees.] {Representation of Human
+  (c) Curve fitting results using low degrees] {Representation of Human
   Trajectories in a Spatio-temporal Cube. (a) Original Object Trajectories; (b)
   Curve fitting results using high degrees; (c) Curve fitting results using low
   degrees. Reproduced from \citeA{lai2015video}.}
@@ -847,7 +847,7 @@ systems.
   \centering
   \includegraphics[width=.9\textwidth]{image/lit/cvbr.PNG}
   \caption[Classification of Approaches Used in Content-based Video Retrieval
-  Systems.] {Classification of Approaches Used in Content-based Video Retrieval
+  Systems] {Classification of Approaches Used in Content-based Video Retrieval
   Systems. Reproduced from \citeA{bhaumik2016hybrid}.}
   \label{fig:cvbr}
 \end{figure}
@@ -886,7 +886,7 @@ into query inputs.
   \includegraphics[width=.9\textwidth]{image/lit/trajdraw1.PNG}
   \caption[\textit{Left}: Hand-drawn Trajectory for Retrieval Purposes.
   \textit{Right}: Resulting Simplified B-spline Curve for Easier Manipulation of
-  Trajectory. ] {\textit{Left}: Hand-drawn Trajectory for Retrieval Purposes.
+  Trajectory] {\textit{Left}: Hand-drawn Trajectory for Retrieval Purposes.
   \textit{Right}: Resulting Simplified B-spline Curve for Easier Manipulation of
   Trajectory. Reproduced from \citeA{lai2015video}.}
   \label{fig:drawquery1}
@@ -909,7 +909,7 @@ illustrates the proposed GUI and the input queries while Figure
 \begin{figure}[hbt!]
   \centering
   \includegraphics[width=.6\textwidth]{image/lit/trajdraw2.PNG}
-  \caption[Graphical User Interface and the Input Trajectory.] {Graphical User
+  \caption[Graphical User Interface and the Input Trajectory] {Graphical User
   Interface and the Input Trajectory. Reproduced from
   \citeA{castanon2016retrieval}.}
 \label{fig:drawquery2}
@@ -918,7 +918,7 @@ illustrates the proposed GUI and the input queries while Figure
 \begin{figure}[hbt!]
   \centering
   \includegraphics[width=.6\textwidth]{image/lit/roc.PNG}
-  \caption[ROC Curve for Cars and Human Trajectories in Airborne Data.]
+  \caption[ROC Curve for Cars and Human Trajectories in Airborne Data]
   {ROC Curve for Cars and Human Trajectories in Airborne Data Reproduced
   from \citeA{castanon2016retrieval}.}
  \label{fig:rocresult}
