--- a/3framework-overview.tex
+++ b/3framework-overview.tex
@@ -62,14 +62,14 @@ In view of testing the proposed framework, a new video dataset was gathered as t
 
 \begin{figure}[hbt!]\centering
 \includegraphics[width=.8\textwidth]{image/new/fcicarpark2.png}
-\caption{Camera setup to capture the car park from the fourth floor}
+\caption{Camera Setup to Capture the Car Park From the Fourth Floor}
 \label{fig:camerasetup}
 \end{figure}
 
 
 \begin{figure}[!hbt]\centering
 \includegraphics[width=.7\textwidth]{image/general/grids.png}
-\caption{View from camera setup; 20$\times$20 Grids}
+\caption{View From Camera Setup; 20$\times$20 Grids}
 \label{fig:viewfromcamera}
 \end{figure}
 
