--- a/thesis.tex
+++ b/thesis.tex
@@ -120,12 +120,31 @@ breaklines=true,breakatwhitespace=true}
 \declarationpage
 
 \acknowledgements{
-Firstly, I would like to thank my wife, Jocelyn for encouraging me to take on this seemingly "less travelled road". Her unceasing support and understanding throughout this journey is precious and much appreciated.
+Firstly, I would like to thank my wife, Jocelyn for encouraging me to take on
+this seemingly "less travelled road". Her unceasing support and understanding
+throughout this journey is precious and much appreciated.
 
-Undeniably, this journey would not be possible without the advises, ideas and guidance provided by my supervisors, Dr. John See as well as Dr. Wong Lai Kuan. Their input certainly has sparked ideas which has been materialised in this work. Thanks you, I owe you many.
+Undeniably, this journey would not be possible without the advises,
+ideas and guidance provided by my supervisors, Dr. John See as well as
+Dr. Wong Lai Kuan. Their input certainly has sparked ideas which has been
+materialised in this work. Thank you, I owe you many.
 
-Not forgetting my family and friends who supported me on this journey. My fellow church members who were encouraging me throughout my masters. Thanks a lot!
-Last and not least, I would like to applaud myself and give myself some credit for putting myself out there, not being afraid to chase after goals and take on challenges that I would have never thought of.
+To my sponsor who supported my studies, thank you for this timely opportunity to
+explore this vast ocean of computer vision and its applications. My Masters
+journey has been one full of excitement. I'm thankful for the opportunity to
+attend and publish multiple conference papers and even the chance to attend my
+first Hackathon in 2017. Not forgetting, obtaining my first copyright during
+this period as well.
+
+Not forgetting my family and friends who supported me on this journey.
+My fellow church members who were encouraging me throughout my Masters.
+Thanks a lot! Last and not least, I would like to applaud myself and give
+myself some credit for putting myself out there, not being afraid to chase
+after goals and desires, and to take on challenges that I would have never
+thought of.
+
+Thank you everyone! Much blessings.
+
 }
 \dedication{To my parents, my wife, and my family.}
 
@@ -148,14 +167,14 @@ Last and not least, I would like to applaud myself and give myself some credit f
 \include{5retrieval-module}
 \include{6conclusion}
 
-\appendix
-\include{sample-appen-manual}
+% \appendix
+% \include{sample-appen-manual}
 % \include{sample-appen-try}
 
 \backmatter
 \bibliography{llt}
 \printglossaries
-\theendnotes
+% \theendnotes
 {\SingleSpacing\printindex}
 
 \ownpubs
