Updates from Overleaf

--- a/2literature-review.tex
+++ b/2literature-review.tex
@@ -155,6 +155,7 @@ measure for each of the proposed methods.
 % CLARENCE: Add more distance measure, especially those that u included for
 % chapter 5
 
+
 \begin{table}[!ht]
 \resizebox{
 \textwidth}{!}{
@@ -176,11 +177,10 @@ Hamming Distance & \begin{tabular}[c]{@{}l@{}}Ensure similarity between vectors,
 on n-Dimension data\end{tabular} & \begin{tabular}[c]{@{}l@{}}Vector order
 dependent,\\ Requires same length vectors\end{tabular} \\ \hline
 \end{tabular}% }
-\caption{List of several Distance Measures, Their Pros and Cons}
+\caption{List of several distance measures along with their pros and cons}
 \label{table:distance}
 \end{table}
-
-
+ 
 
 
 \subsection{Human Visual System}
