temporarily commented out list of distance measure table... need to put it back

--- a/2literature-review.tex
+++ b/2literature-review.tex
@@ -156,30 +156,30 @@ measure for each of the proposed methods.
 % chapter 5
 
 
-\begin{table}[!ht]
-\resizebox{
-\textwidth}{!}{
-\begin{tabular}{|l|l|l|} \hline
-\textbf{Distance Measure} & \textbf{Pros} & \textbf{Cons} \\ \hline
-Euclidean Distance & \begin{tabular}[c]{@{}l@{}}Simple, Fast,\\ Commonly used,\\ Able to
-work on n-Dimension data\end{tabular} & \begin{tabular}[c]{@{}l@{}}Vector
-order dependent,\\ Requires same length vectors\end{tabular} \\ \hline
-Manhattan Distance & \begin{tabular}[c]{@{}l@{}}Reflection invariant,\\
-Translation invariant,\\ Produces same result,\\ Able to work on n-Dimension
-data\end{tabular} & \begin{tabular}[c]{@{}l@{}}Requires same length
-vectors,\\ Does not have a unique solution\end{tabular} \\ \hline
-Chamfer Distance & \begin{tabular}[c]{@{}l@{}}Able to work with \\ vectors of
-different length,\\ Vector order invariant, \\ Minimises the difference \\
-between vectors,\\ Able to work on n-Dimension data\end{tabular} &
-\begin{tabular}[c]{@{}l@{}}Higher computational cost,\\ Alternative matches
-may \\ receive equal distance\end{tabular} \\ \hline
-Hamming Distance & \begin{tabular}[c]{@{}l@{}}Ensure similarity between vectors,\\ Able to work
-on n-Dimension data\end{tabular} & \begin{tabular}[c]{@{}l@{}}Vector order
-dependent,\\ Requires same length vectors\end{tabular} \\ \hline
-\end{tabular}% }
-\caption{List of several distance measures along with their pros and cons}
-\label{table:distance}
-\end{table}
+% \begin{table}[!ht]
+% \resizebox{
+% \textwidth}{!}{
+% \begin{tabular}{|l|l|l|} \hline
+% \textbf{Distance Measure} & \textbf{Pros} & \textbf{Cons} \\ \hline
+% Euclidean Distance & \begin{tabular}[c]{@{}l@{}}Simple, Fast,\\ Commonly used,\\ Able to
+% work on n-Dimension data\end{tabular} & \begin{tabular}[c]{@{}l@{}}Vector
+% order dependent,\\ Requires same length vectors\end{tabular} \\ \hline
+% Manhattan Distance & \begin{tabular}[c]{@{}l@{}}Reflection invariant,\\
+% Translation invariant,\\ Produces same result,\\ Able to work on n-Dimension
+% data\end{tabular} & \begin{tabular}[c]{@{}l@{}}Requires same length
+% vectors,\\ Does not have a unique solution\end{tabular} \\ \hline
+% Chamfer Distance & \begin{tabular}[c]{@{}l@{}}Able to work with \\ vectors of
+% different length,\\ Vector order invariant, \\ Minimises the difference \\
+% between vectors,\\ Able to work on n-Dimension data\end{tabular} &
+% \begin{tabular}[c]{@{}l@{}}Higher computational cost,\\ Alternative matches
+% may \\ receive equal distance\end{tabular} \\ \hline
+% Hamming Distance & \begin{tabular}[c]{@{}l@{}}Ensure similarity between vectors,\\ Able to work
+% on n-Dimension data\end{tabular} & \begin{tabular}[c]{@{}l@{}}Vector order
+% dependent,\\ Requires same length vectors\end{tabular} \\ \hline
+% \end{tabular}}
+% \caption{List of several distance measures along with their pros and cons}
+% \label{table:distance}
+% \end{table}
  
 
 
